<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".account.LoginActivity">
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_agrobit" />

    <ProgressBar
            android:id="@+id/signupProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-4dp"
            android:foregroundGravity="bottom"
            android:indeterminate="true"
            android:visibility="invisible"
            android:padding="0dp"
            android:theme="@style/ProgressBarStyle" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/welcomeSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/sloganSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcomeSignup"
                android:layout_marginTop="0dp"
                android:text="@string/slogan"
                android:textColor="@color/darkGray"
                android:textSize="15sp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/signupButton"
                android:layout_below="@+id/sloganSignup"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            <EditText
                    android:id="@+id/signupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
            />

            <EditText
                    android:id="@+id/signupEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            <EditText
                    android:id="@+id/signupPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

        </LinearLayout>

        <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_drawable"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


    </RelativeLayout>

</RelativeLayout>