<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:aapt="http://schemas.android.com/aapt"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <ImageView android:id="@+id/imgTop"
               android:layout_width="match_parent"
               android:layout_height="500dp"
               android:layout_marginTop="0dp"
               android:scaleType="centerCrop"
               android:contentDescription="@string/app_name"
               android:background="@drawable/bg_home_profile_top"/>
    <ImageView android:id="@+id/btnBack"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:layout_marginTop="24dp"
               android:onClick="onClick"
               android:contentDescription="@string/app_name"
               android:layout_marginStart="24dp"
               app:srcCompat="@drawable/ic_close_white"/>
    <ImageView android:id="@+id/imgProfilePic"
               android:layout_width="65dp"
               android:layout_height="65dp"
               android:layout_marginTop="50dp"
               android:scaleType="centerCrop"
               android:adjustViewBounds="true"
               android:layout_centerHorizontal="true"
               android:contentDescription="@string/app_name"
               app:srcCompat="@drawable/ic_profile_image"/>
    <ImageView android:id="@+id/imgInfo" 
               android:background="@color/greyHeaderBackground" 
               android:layout_width="match_parent" 
               android:layout_height="400dp" 
               android:layout_marginTop="300dp" 
               android:layout_marginBottom="0dp" 
               android:layout_centerHorizontal="true" 
               android:contentDescription="@string/app_name"/>
    <TextView android:textSize="14sp"
              android:textColor="@color/profile_info"
              android:id="@+id/txtInfo" 
              android:layout_width="wrap_content" 
              android:layout_height="20dp" 
              android:layout_marginTop="360dp" 
              android:text="@string/label_profile_information" android:fontFamily="sans-serif-medium" android:layout_marginStart="40dp"/>
    <TextView android:textSize="14sp" 
              android:textColor="@color/profile_info" 
              android:id="@+id/txtLeftName" 
              android:layout_width="55dp" 
              android:layout_height="20dp" 
              android:layout_marginTop="390dp" 
              android:text="@string/label_profile_client" 
              android:fontFamily="sans-serif-condensed" 
              android:layout_marginStart="40dp"/>
    <TextView android:textSize="14sp" 
              android:textColor="@color/profile_info" 
              android:id="@+id/txtRightName" 
              android:layout_width="wrap_content" 
              android:layout_height="25dp" 
              android:layout_marginTop="390dp" 
              android:fontFamily="sans-serif" 
              android:layout_marginStart="115dp"/>
    <TextView android:textSize="14sp" 
              android:textColor="@color/profile_info" 
              android:id="@+id/txtLeftBank" 
              android:layout_width="55dp" 
              android:layout_height="20dp" 
              android:layout_marginTop="420dp" 
              android:text="@string/label_profile_email" android:fontFamily="sans-serif-condensed" android:layout_marginStart="40dp"/>
    <TextView android:textSize="14sp" 
              android:textColor="@color/profile_info" 
              android:id="@+id/txtRightBank" 
              android:layout_width="250dp" 
              android:layout_height="25dp" 
              android:layout_marginTop="420dp" 
              android:fontFamily="sans-serif" 
              android:layout_marginStart="115dp"/>
    <TextView android:textSize="14sp" 
              android:textColor="@color/profile_info" 
              android:id="@+id/txtLeftClabe" 
              android:layout_width="55dp" 
              android:layout_height="20dp" 
              android:layout_marginTop="450dp"
              android:text="@string/label_profile_phone"
              android:fontFamily="sans-serif-condensed" 
              android:layout_marginStart="40dp"/>
    <TextView android:textSize="14sp" 
              android:textColor="@color/profile_info" 
              android:id="@+id/txtRightClabe"
              android:layout_width="250dp"
              android:layout_height="25dp" 
              android:layout_marginTop="450dp"
              android:fontFamily="sans-serif"
              android:layout_marginStart="115dp"/>
    <TextView android:textSize="14sp"
              android:textColor="@color/profile_info"
              android:id="@+id/txtLeftOrchardsP"
              android:layout_width="55dp"
              android:layout_height="20dp"
              android:layout_marginTop="480dp"
              android:text="@string/label_profile_orchards"
              android:fontFamily="sans-serif-condensed"
              android:layout_marginStart="40dp"/>
    <TextView android:textSize="14sp"
              android:textColor="@color/profile_info"
              android:id="@+id/txtRightOrchardsP"
              android:layout_width="250dp"
              android:layout_height="25dp"
              android:layout_marginTop="480dp"
              android:fontFamily="sans-serif"
              android:layout_marginStart="115dp"/>
    <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="180dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="20dp">
        <RelativeLayout
                android:background="@color/lightGray"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
            <TextView android:textSize="30sp"
                      android:textColor="@color/darkGray"
                      android:textStyle="bold"
                      android:id="@+id/txtOrchard"
                      android:text="Agrotaurus"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerInParent="true"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>